# AI_Story_Generator

./: .env  .gitignore  database.db  main.py  pyproject.toml
core/: config.py  models.py  story_generator.py
db/: database.py
models/: job.py  story.py
routers/: job.py  story.py
schemas/: job.py  story.py
